part of graph
