# internal/infrastructure/repository/note/repository.go
@@ -77,7 +77,7 @@ func (repo *Repository) GetNoteCountInLayout(ctx context.Context, layoutId uuid.
 	return n, err
 }
 
-// todo check access
+// todo check access to layout
 func (repo *Repository) GetNotesByLayoutId(ctx context.Context, layoutId, userId uuid.UUID, offset, limit int) ([]entity.Note, error) {
 	query := `
 		select n.* from notes n
@@ -113,4 +113,88 @@ func (repo *Repository) GetNotesByLayoutId(ctx context.Context, layoutId, userId
 		return nil, errors.Wrap(err, "rows.Err")
 	}
 	return notes, nil
+}
+
+func (repo *Repository) GetNotesWithoutPosition(ctx context.Context, layoutId, userId uuid.UUID) ([]entity.Note, error) {
+	query := `
+		select n.* from notes n
+		join layout_note ln on ln.note_id = n.id
+		where ln.layout_id = $1 and $2 = ANY(n.have_access) and x_position is null and y_position is null
+	`
+	rows, err := repo.conn.Query(ctx, query, layoutId, userId)
+	if err != nil {
+		return nil, errors.Wrap(err, "repo.conn.Query")
+	}
+	defer rows.Close()
+
+	var notes []entity.Note
+	for rows.Next() {
+		var item entity.Note
+		err := rows.Scan(
+			&item.Id,
+			&item.Title,
+			&item.Payload,
+			&item.CreatedAt,
+			&item.OwnerId,
+			&item.HaveAccess,
+		)
+		if err != nil {
+			return nil, errors.Wrap(err, "rows.Scan")
+		}
+		notes = append(notes, item)
+	}
+
+	if err := rows.Err(); err != nil {
+		return nil, errors.Wrap(err, "rows.Err")
+	}
+	return notes, nil
+}
+
+func (repo *Repository) GetNotesWithPosition(ctx context.Context, layoutId, userId uuid.UUID) ([]entity.NoteWithPosition, error) {
+	query := `
+		select n.*, ln.note_id, ln.layout_id, ln.x_position, ln.y_position from notes n
+		join layout_note ln on ln.note_id = n.id
+		where ln.layout_id = $1 and $2 = ANY(n.have_access) and x_position is not null and y_position is not null
+	`
+	rows, err := repo.conn.Query(ctx, query, layoutId, userId)
+	if err != nil {
+		return nil, errors.Wrap(err, "repo.conn.Query")
+	}
+	defer rows.Close()
+
+	var notes []entity.NoteWithPosition
+	for rows.Next() {
+		var item entity.NoteWithPosition
+		err := rows.Scan(
+			&item.Id,
+			&item.Title,
+			&item.Payload,
+			&item.CreatedAt,
+			&item.OwnerId,
+			&item.HaveAccess,
+			&item.NoteId,
+			&item.LayoutId,
+			&item.XPosition,
+			&item.YPosition,
+		)
+		if err != nil {
+			return nil, errors.Wrap(err, "rows.Scan")
+		}
+		notes = append(notes, item)
+	}
+
+	if err := rows.Err(); err != nil {
+		return nil, errors.Wrap(err, "rows.Err")
+	}
+	return notes, nil
+}
+
+func (repo *Repository) UpdateNotePosition(ctx context.Context, layoutId, noteId uuid.UUID, xPos, yPos *float64) error {
+	query := `
+		update layout_note ln
+		set x_position = $1, y_position = $2
+		where ln.layout_id = $3 and ln.note_id = $4
+	`
+	_, err := repo.conn.Exec(ctx, query, xPos, yPos, layoutId, noteId)
+	return err
 }
